fix windows jumping around

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -5,12 +5,11 @@
   font-family: "Agave Nerd Font";
   font-size: 13px;
   margin-top: 1px;
-  color: #ffead3;
 }
 
 window#waybar {
   background-color: rgba(43, 48, 59, 0);
-  color: #ffffff;
+  color: #ffead3;
   margin-bottom: 0px;
   padding: 0px;
 }
@@ -65,6 +64,7 @@ window#waybar {
 #network,
 #bluetooth,
 #pulseaudio,
+#memory,
 #custom-nvidia {
   margin: 2px 6px;
 }
@@ -81,7 +81,6 @@ tooltip {
 .modules-center {
   background-color: rgba(55, 55, 55, 0.55);
   font-size: 13px;
-  font-weight: bold;
   margin: 2px 4px;
   border-radius: 6px;
 }
@@ -94,7 +93,6 @@ tooltip {
 }
 
 #custom-weather {
-  font-weight: bold;
   background: rgba(55, 55, 55, 0.3);
   border: 2px solid rgba(120, 120, 120, 0.3);
   margin: 2px;
@@ -112,14 +110,20 @@ tooltip {
   margin: 0px 2px;
   padding-bottom: 1px;
   transition: all 0.8s ease;
+  border-radius: 2.5px;
+  border-bottom: transparent 2px solid;
 }
 
 #taskbar button.active {
   background-image: linear-gradient(to top, rgba(0, 255, 98, 0.162), rgba(0, 255, 98, 0));
-  border-radius: 0%;
+  border-radius: 2.5px;
   border-bottom: #00ff62 2px solid;
 }
 
 #taskbar button:hover {
   background: rgba(34, 36, 54, 0.5);
+}
+
+#taskbar.empty {
+  opacity: 0;
 }
